RESOLVED FIXED38746
[GTK] Fails to build on GTK+ < 2.14
https://bugs.webkit.org/show_bug.cgi?id=38746
Summary [GTK] Fails to build on GTK+ < 2.14
Gustavo Noronha (kov)
Reported 2010-05-07 06:53:40 PDT
Because we are now using gtk_adjustment_configure.
Attachments
proposed fix (2.22 KB, patch)
2010-05-07 06:55 PDT, Gustavo Noronha (kov)
gustavo: commit-queue-
Gustavo Noronha (kov)
Comment 1 2010-05-07 06:55:08 PDT
Created attachment 55370 [details] proposed fix
WebKit Review Bot
Comment 2 2010-05-07 06:56:04 PDT
Attachment 55370 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/platform/gtk/ScrollViewGtk.cpp:78: Extra space before ( in function call [whitespace/parens] [4] WebCore/platform/gtk/ScrollViewGtk.cpp:89: Use 0 instead of NULL. [readability/null] [5] WebCore/platform/gtk/ScrollViewGtk.cpp:94: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 3 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gustavo Noronha (kov)
Comment 3 2010-05-07 06:58:54 PDT
Comment on attachment 55370 [details] proposed fix I'll commit manually with style fixed.
Gustavo Noronha (kov)
Comment 4 2010-05-07 07:14:42 PDT
Comment on attachment 55370 [details] proposed fix Landed as 58946 with rs by kenne.
Note You need to log in before you can comment on or make changes to this bug.