2010-05-07  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Rubber-stamped by Kenneth Rohde Christiansen.

        [GTK] Fails to build on GTK+ < 2.14
        https://bugs.webkit.org/show_bug.cgi?id=38746

        Build fix only. Do basically the same as gtk_adjustment_configure
        would do if we are bellow GTK+ 2.14.

        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::AdjustmentConfigure):

Canonical link: https://commits.webkit.org/50192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58946 268f45cc-cd09-0410-ab3c-d52691b4dbfc